<?xml version="1.0"?>
<package>
  <name>sonar_positioning</name>
  <version>0.1.0</version>
  <description>subscribe to sonar data and attitude and find position update</description>

  <maintainer email="first.lastname@posteo.de">Raphhael Nagel</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="first.lastname@posteo.de">Raphhael Nagel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>tf</build_depend>

  <build_depend>message_generation</build_depend>
  

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
